# embedded-systems-bridge

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/scripts/: update_version.py
.github/workflows/: deploy.yml  main.yml
docs/: callable_interface.md
esb/: __init__.py  bridge.py  executor.py
esb/components/: __init__.py  fluents.py
esb/plexmo/: __init__.py  monitor.py
examples/: drone_survey.py  parallel.py  partialorderplan.py  robot_example.py  sequential.py  time_triggered.py
tests/: __init__.py  test_bridge.py  test_create_action.py  test_dispatcher.py  test_exceptions.py  test_graph.py  test_logger.py  test_monitor.py
tests/components/: test_expression_manager.py
tests/execution/: test_executor.py  test_task_manager.py
tests/plexmo/: test_dispatcher.py  test_monitor.py
up_bridge/: __init__.py  _bridge.py  bridge.py  callable_interface.md  executor.py
up_bridge/components/: __init__.py  actions.py  graph.py  user_types.py
up_bridge/plexmo/: __init__.py  dispatcher.py  monitor.py
up_esb/: __init__.py  bridge.py  exceptions.py  executor.py  logger.py  mbt.py  orchestrator.py  status.py
up_esb/components/: __init__.py  actions.py  expression_manager.py  graph.py  up_utils.py  user_types.py
up_esb/execution/: __init__.py  executor.py  parallel_executor.py  task_manager.py
up_esb/plexmo/: __init__.py  dispatcher.py  monitor.py
